# fjs-dealias-portfolio

./: .env.example  .gitignore  AGENTS.md  METHODS.md  Makefile  PROGRESS.md  README.md  REPORT.md  REPO_PLAN.md  ROADMAP.md  RUNBOOK.md  TODO_SPRINT1.md  calibration_defaults.json  mypy.ini  pairing.py  pyproject.toml  pytest.ini  ruff.toml
calibration/: defaults.json  edge_delta_thresholds.json  thresholds.json
configs/: detection.yaml
data/: registry.json
docs/: CLOUD.md
experiments/: __init__.py  prewhiten.py
reports/: aggregate_summary.csv  brief_20251112_073305.md  calibration_notes.md  memo.md  memo_20251105_215141.md  memo_20251111_015958.md  memo_20251111_045125.md  memo_20251112_073352.md
scripts/: aws_provision.sh  aws_run.sh  bench_linalg.py  calibrate_thresholds.py  run_calibration.sh
tests/: conftest.py  test_aggregate_runs.py  test_alignment_diag.py  test_balanced.py  test_balanced_sigma_a.py  test_balanced_weeks.py  test_cache.py  test_cache_switch_estimator.py  test_calibrate_defaults.py  test_data_registry.py  test_dealias.py  test_dealias_guardrails.py  test_dealias_search.py  test_diagnostics.py  test_dm.py  test_e2_timeseries.py  test_equity_ablations.py  test_equity_prewhiten.py  test_evaluation_checks.py  test_evaluation_metrics.py  test_factor_baselines.py  test_factor_cov.py  test_gating.py  test_metrics_qlike.py  test_minvar_regularized.py  test_mp.py  test_mp_edge_and_root.py  test_nested_balanced.py  test_nested_smoke.py  test_pairing.py  test_pipeline_smoke.py  test_plotting_utils.py  test_power_null.py  test_report_gather.py  (+12 more)
(+945 files in other folders)
