[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fjs-dealias-portfolio"
version = "0.1.0"
description = "Research-grade toolkit for MANOVA de-aliasing and portfolio construction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "FJS Research Group" },
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "numba",
    "nasdaq-data-link",
    "wrds",
    "pyyaml",
    "tqdm",
    "pytest",
    "cvxpy",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest-cov",
    "pytest-xdist",
    "pytest-sugar",
    "pytest-timeout",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
markers = [
    "slow: long-running statistical tests that are accurate but expensive",
]
